[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

[dependencies]
blas-src = { version = "0.11.1", features = ["openblas"] }
byteorder = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
image = "0.25.5"
ndarray = { version = "0.16.1", features = ["blas"] }
num-traits = "0.2.19"
openblas-src = { version = "0.10.11", features = ["cblas", "system"] }
rand = "0.9.0"
rand_distr = "0.5.1"
